--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,297 +1,302 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>QueueEase: Queue Management System</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+	<head>
+		<title>QueueEase: Queue Management System</title>
+		<!-- Google Font: Poppins -->
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+			rel="stylesheet"
+		/>
+		<style>
+			* {
+				margin: 0;
+				padding: 0;
+				box-sizing: border-box;
+			}
 
-        body {
-            overflow: hidden;
-            height: 100vh;
-            background: linear-gradient(45deg, #12372A, #436850, #9c9f7a, #FBFADA);
-            background-size: 300% 300%;
-            animation: backgroundShift 10s linear infinite;
-            font-family: 'Arial', sans-serif;
-        }
+			body {
+				overflow: hidden;
+				height: 100vh;
+				background: linear-gradient(45deg, #12372a, #436850, #9c9f7a, #fbfada);
+				background-size: 300% 300%;
+				animation: backgroundShift 10s linear infinite;
+				font-family: 'Poppins', sans-serif;
+			}
 
-        @keyframes backgroundShift {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
-        }
+			@keyframes backgroundShift {
+				0% {
+					background-position: 0% 50%;
+				}
+				50% {
+					background-position: 100% 50%;
+				}
+				100% {
+					background-position: 0% 50%;
+				}
+			}
 
-        .container {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 100%;
-            z-index: 0; /* Keep the shapes behind the content */
-        }
+			.container {
+				position: absolute;
+				top: 0;
+				left: 0;
+				height: 100%;
+				width: 100%;
+				z-index: 0; /* Keep the shapes behind the content */
+			}
 
-        .shape {
-            position: absolute;
-            background: rgba(255, 255, 255, 0.2); /* Semi-transparent background */
-            backdrop-filter: blur(8px); /* Frosted glass effect */
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Soft shadow for the glass effect */
-            animation: moveAround 10s ease-in-out infinite;
-        }
+			.shape {
+				position: absolute;
+				background: rgba(255, 255, 255, 0.2); /* Semi-transparent background */
+				backdrop-filter: blur(8px); /* Frosted glass effect */
+				box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Soft shadow for the glass effect */
+				animation: moveAround 10s ease-in-out infinite;
+			}
 
-        @keyframes moveAround {
-            0% {
-                transform: translate(0, 0);
-            }
-            25% {
-                transform: translate(calc(100vw - 150px), calc(100vh - 150px));
-            }
-            50% {
-                transform: translate(calc(-100vw + 150px), calc(100vh - 150px));
-            }
-            75% {
-                transform: translate(calc(-100vw + 150px), calc(-100vh + 150px));
-            }
-            100% {
-                transform: translate(0, 0);
-            }
-        }
+			@keyframes moveAround {
+				0% {
+					transform: translate(0, 0);
+				}
+				25% {
+					transform: translate(calc(100vw - 150px), calc(100vh - 150px));
+				}
+				50% {
+					transform: translate(calc(-100vw + 150px), calc(100vh - 150px));
+				}
+				75% {
+					transform: translate(calc(-100vw + 150px), calc(-100vh + 150px));
+				}
+				100% {
+					transform: translate(0, 0);
+				}
+			}
 
-        /* Shape styling */
-        .shape.circle {
-            border-radius: 50%; /* Circle */
-        }
+			/* Shape styling */
+			.shape.circle {
+				border-radius: 50%; /* Circle */
+			}
 
-        .shape.rounded {
-            border-radius: 10%; /* Rounded square */
-        }
+			.shape.rounded {
+				border-radius: 10%; /* Rounded square */
+			}
 
-        .gradient-1 {
-            background: linear-gradient(45deg, #12372A, #436850);
-        }
+			.gradient-1 {
+				background: linear-gradient(45deg, #12372a, #436850);
+			}
 
-        .gradient-2 {
-            background: linear-gradient(45deg, #436850, #ADBC9F);
-        }
+			.gradient-2 {
+				background: linear-gradient(45deg, #436850, #adbc9f);
+			}
 
-        .gradient-3 {
-            background: linear-gradient(45deg, #ADBC9F, #FBFADA);
-        }
+			.gradient-3 {
+				background: linear-gradient(45deg, #adbc9f, #fbfada);
+			}
 
-        .gradient-4 {
-            background: linear-gradient(45deg, #FBFADA, #12372A);
-        }
+			.gradient-4 {
+				background: linear-gradient(45deg, #fbfada, #12372a);
+			}
 
-        .gradient-5 {
-            background: linear-gradient(45deg, #12372A, #FBFADA);
-        }
+			.gradient-5 {
+				background: linear-gradient(45deg, #12372a, #fbfada);
+			}
 
-        main {
-            position: relative;
-            z-index: 5; /* Ensure content is above the shapes */
-        }
+			main {
+				position: relative;
+				z-index: 5; /* Ensure content is above the shapes */
+			}
 
-        .hero {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 2rem;
-            height: 100vh;
-        }
+			.hero {
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				padding: 2rem;
+				height: 100vh;
+			}
 
-        .content {
-            max-width: 600px;
-            color: #042514;
-        }
+			.content {
+				max-width: 600px;
+				color: #042514;
+			}
 
-        .content h1 {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-        }
+			.content h1 {
+				font-size: 3rem;
+				margin-bottom: 1rem;
+			}
 
-        .content p {
-            font-size: 1.2rem;
-            margin-bottom: 2rem;
-        }
+			.content p {
+				font-size: 1.2rem;
+				margin-bottom: 2rem;
+			}
 
-        .buttons {
-            display: flex;
-            gap: 1rem;
-        }
+			.buttons {
+				display: flex;
+				gap: 1rem;
+			}
 
-        .btn {
-            text-decoration: none;
-            padding: 10px 20px;
-            font-size: 1rem;
-            border-radius: 5px;
-            color: #ffffff;
-            border: 2px solid transparent;
-            transition: background 0.3s ease, transform 0.2s ease, border-color 0.3s ease;
-        }
+			.btn {
+				text-decoration: none;
+				padding: 10px 20px;
+				font-size: 1rem;
+				border-radius: 5px;
+				color: #ffffff;
+				border: 2px solid transparent;
+				transition: background 0.3s ease, transform 0.2s ease,
+					border-color 0.3s ease;
+			}
 
-        .btn.register {
-            background: #436850;
-            border-color: #436850;
-        }
+			.btn.register {
+				background: #436850;
+				border-color: #436850;
+			}
 
-        .btn.register:hover {
-            background: #12372A;
-        }
+			.btn.register:hover {
+				background: #12372a;
+			}
 
-        .btn.login {
-            background: #ADBC9F;
-            border-color: #ADBC9F;
-        }
+			.btn.login {
+				background: #adbc9f;
+				border-color: #adbc9f;
+			}
 
-        .btn.login:hover {
-            background: #bbba90;
-            color: #12372A;
-        }
-        @media (max-width: 768px) {
-    .hero {
-        flex-direction: column;
-        align-items: center;
-        padding: 1rem;
-    }
+			.btn.login:hover {
+				background: #bbba90;
+				color: #12372a;
+			}
+			@media (max-width: 768px) {
+				.hero {
+					flex-direction: column;
+					align-items: center;
+					padding: 1rem;
+				}
 
-    .content h1 {
-        font-size: 2rem;
-    }
+				.content h1 {
+					font-size: 2rem;
+				}
 
-    .content p {
-        font-size: 1rem;
-    }
+				.content p {
+					font-size: 1rem;
+				}
 
-    .buttons {
-        flex-direction: column;
-        gap: 1rem;
-    }
+				.buttons {
+					flex-direction: column;
+					gap: 1rem;
+				}
 
-    .btn {
-        width: 100%;
-        padding: 12px;
-        font-size: 1.1rem;
-    }
-}
+				.btn {
+					width: 100%;
+					padding: 12px;
+					font-size: 1.1rem;
+				}
+			}
 
-@media (max-width: 480px) {
-    .hero {
-        padding: 1rem;
-    }
+			@media (max-width: 480px) {
+				.hero {
+					padding: 1rem;
+				}
 
-    .content h1 {
-        font-size: 1.5rem;
-    }
+				.content h1 {
+					font-size: 1.5rem;
+				}
 
-    .content p {
-        font-size: 0.9rem;
-    }
+				.content p {
+					font-size: 0.9rem;
+				}
 
-    .buttons {
-        gap: 0.5rem;
-    }
+				.buttons {
+					gap: 0.5rem;
+				}
 
-    .btn {
-        font-size: 1rem;
-        padding: 10px 15px;
-    }
-}
+				.btn {
+					font-size: 1rem;
+					padding: 10px 15px;
+				}
+			}
+		</style>
+	</head>
+	<body>
+		<div class="container">
+			<!-- Your shapes will be here -->
+		</div>
 
-    </style>
-</head>
-<body>
-    <div class="container">
-        <!-- Your shapes will be here -->
-    </div>
+		<main>
+			<section class="hero">
+				<div class="content">
+					<h1>QueueEase: A Queue Management System</h1>
+					<p>
+						QueueEase will streamline queue management and reduce waiting times
+						for <b>PhilHealth</b> establishment.
+					</p>
+					<div class="buttons">
+						<a href="register.html" class="btn register">Register</a>
+						<a href="login.html" class="btn login">Log in</a>
+					</div>
+				</div>
+			</section>
+		</main>
 
-    <main>
-        <section class="hero">
-            <div class="content">
-                <h1>QueueEase: A Queue Management System</h1>
-                <p>
-                    QueueEase will streamline queue management and reduce waiting times
-                    for <b>PhilHealth</b> establishment.
-                </p>
-                <div class="buttons">
-                    <a href="register.html" class="btn register">Register</a>
-                    <a href="login.html" class="btn login">Log in</a>
-                </div>
-            </div>
-        </section>
-    </main>
+		<script>
+			const container = document.querySelector(".container");
+			const numberOfShapes = 10; // Number of shapes to add
+			const shapeSize = 100; // Base size of shapes
 
-    <script>
-        const container = document.querySelector('.container');
-        const numberOfShapes = 10; // Number of shapes to add
-        const shapeSize = 100; // Base size of shapes
+			const getRandomPosition = () => ({
+				x: Math.random() * (window.innerWidth - shapeSize),
+				y: Math.random() * (window.innerHeight - shapeSize),
+			});
 
-        const getRandomPosition = () => ({
-            x: Math.random() * (window.innerWidth - shapeSize),
-            y: Math.random() * (window.innerHeight - shapeSize),
-        });
+			const getRandomGradient = () => {
+				const gradients = [
+					"gradient-1",
+					"gradient-2",
+					"gradient-3",
+					"gradient-4",
+					"gradient-5",
+				];
+				return gradients[Math.floor(Math.random() * gradients.length)];
+			};
 
-        const getRandomGradient = () => {
-            const gradients = [
-                'gradient-1',
-                'gradient-2',
-                'gradient-3',
-                'gradient-4',
-                'gradient-5',
-            ];
-            return gradients[Math.floor(Math.random() * gradients.length)];
-        };
+			const isOverlapping = (newShape, existingShapes) => {
+				return existingShapes.some((shape) => {
+					const dx = shape.x - newShape.x;
+					const dy = shape.y - newShape.y;
+					const distance = Math.sqrt(dx * dx + dy * dy);
+					return distance < shapeSize; // Check for collision
+				});
+			};
 
-        const isOverlapping = (newShape, existingShapes) => {
-            return existingShapes.some(shape => {
-                const dx = shape.x - newShape.x;
-                const dy = shape.y - newShape.y;
-                const distance = Math.sqrt(dx * dx + dy * dy);
-                return distance < shapeSize; // Check for collision
-            });
-        };
+			const createShapes = () => {
+				const existingShapes = [];
+				for (let i = 0; i < numberOfShapes; i++) {
+					let position;
 
-        const createShapes = () => {
-            const existingShapes = [];
-            for (let i = 0; i < numberOfShapes; i++) {
-                let position;
+					do {
+						position = getRandomPosition();
+					} while (isOverlapping(position, existingShapes));
 
-                do {
-                    position = getRandomPosition();
-                } while (isOverlapping(position, existingShapes));
+					existingShapes.push(position);
 
-                existingShapes.push(position);
+					const shape = document.createElement("div");
+					shape.classList.add("shape");
+					shape.style.width = `${shapeSize}px`;
+					shape.style.height = `${shapeSize}px`;
+					shape.style.left = `${position.x}px`;
+					shape.style.top = `${position.y}px`;
 
-                const shape = document.createElement('div');
-                shape.classList.add('shape');
-                shape.style.width = `${shapeSize}px`;
-                shape.style.height = `${shapeSize}px`;
-                shape.style.left = `${position.x}px`;
-                shape.style.top = `${position.y}px`;
+					if (i % 2 === 0) {
+						shape.classList.add("circle");
+					} else {
+						shape.classList.add("rounded");
+					}
 
-                if (i % 2 === 0) {
-                    shape.classList.add('circle');
-                } else {
-                    shape.classList.add('rounded');
-                }
+					shape.classList.add(getRandomGradient());
 
-                shape.classList.add(getRandomGradient());
+					shape.style.animationDuration = `${10 + Math.random() * 5}s`;
+					shape.style.animationDelay = `${Math.random() * 5}s`;
 
-                shape.style.animationDuration = `${10 + Math.random() * 5}s`;
-                shape.style.animationDelay = `${Math.random() * 5}s`;
+					container.appendChild(shape);
+				}
+			};
 
-                container.appendChild(shape);
-            }
-        };
-
-        createShapes();
-    </script>
-</body>
+			createShapes();
+		</script>
+	</body>
 </html>
